--- a/vignettes/paper.bib
+++ b/vignettes/paper.bib
@@ -1,14 +1,16 @@
-@misc{bahlburg2023,
-	title        = {Intercomparison of growth models for {Antarctic} krill ({Euphausia superba}): towards a generalised understanding},
-	author       = {Dominik Bahlburg and Sally Thorpe and Bettina Meyer and Uta Berger and Eugene Murphy},
+@article{bahlburg2023,
+	title        = {An intercomparison of models predicting growth of {Antarctic} krill ({Euphausia superba}): The importance of recognizing model specificity},
+	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
 	year         = 2023,
-	journal      = {bioRxiv},
-	publisher    = {Cold Spring Harbor Laboratory},
-	doi          = {10.1101/2023.05.09.540012},
-	url          = {https://www.biorxiv.org/content/early/2023/05/12/2023.05.09.540012},
-	elocation-id = {2023.05.09.540012},
-	abstract     = {Antarctic krill is a key species of the Southern Ocean, impacted by climate change and human exploitation. Understanding how these changes affect the distribution and abundance of krill is crucial for generating projections of change for Southern Ocean ecosystems. Krill growth is an important indicator of habitat suitability and a series of models have been developed and used to examine krill growth potential at different spatial and temporal scales. The available models have been developed using a range of empirical and mechanistic approaches, which provide alternative perspectives and cross-validation of analyses of the key processes influencing krill growth. Here we undertake an intercomparison of a suite of the available models to understand their sensitivities to major driving variables. This illustrates that the results are strongly determined by the model structure and technical characteristics, and the data on which they were developed and validated. Our results emphasize the importance of assessing the constraints and requirements of individual krill growth models to ensure their appropriate application. The study also demonstrates the value of the development of alternative modelling approaches to identify key processes affecting the dynamics of krill. Of critical importance for modelling the growth of krill is appropriately assessing and accounting for differences in estimates of food availability resulting from alternative methods of observation. We suggest that an intercomparison approach is particularly valuable in the development and application of models for the assessment of krill growth potential at circumpolar scales and for future projections. As another result of the intercomparison, the implementations of the models used in this study are now publicly available for future use and analyses.Competing Interest StatementThe authors have declared no competing interest.},
-	eprint       = {https://www.biorxiv.org/content/early/2023/05/12/2023.05.09.540012.full.pdf}
+	month        = {07},
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
+	volume       = 18,
+	number       = 7,
+	pages        = {1--29},
+	doi          = {10.1371/journal.pone.0286036},
+	url          = {https://doi.org/10.1371/journal.pone.0286036},
+	abstract     = {Antarctic krill (Euphausia superba) is a key species of the Southern Ocean, impacted by climate change and human exploitation. Understanding how these changes affect the distribution and abundance of krill is crucial for generating projections of change for Southern Ocean ecosystems. Krill growth is an important indicator of habitat suitability and a series of models have been developed and used to examine krill growth potential at different spatial and temporal scales. The available models have been developed using a range of empirical and mechanistic approaches, providing alternative perspectives and comparative analyses of the key processes influencing krill growth. Here we undertake an intercomparison of a suite of the available models to understand their sensitivities to major driving variables. This illustrates that the results are strongly determined by the model structure and technical characteristics, and the data on which they were developed and validated. Our results emphasize the importance of assessing the constraints and requirements of individual krill growth models to ensure their appropriate application. The study also demonstrates the value of the development of alternative modelling approaches to identify key processes affecting the dynamics of krill. Of critical importance for modelling the growth of krill is appropriately assessing and accounting for differences in estimates of food availability resulting from alternative methods of observation. We suggest that an intercomparison approach is particularly valuable in the development and application of models for the assessment of krill growth potential at circumpolar scales and for future projections. As another result of the intercomparison, the implementations of the models used in this study are now publicly available for future use and analyses.}
 }
 @book{moraga2023,
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
@@ -140,7 +142,7 @@
 	title        = {Advanced {R}},
 	author       = {Wickham, Hadley},
 	year         = 2019,
-	month        = {5},
+	month        = 5,
 	publisher    = {Chapman and Hall/CRC},
 	doi          = {10.1201/9781351201315},
 	url          = {http://dx.doi.org/10.1201/9781351201315},
@@ -151,7 +153,7 @@
 	title        = {S3},
 	author       = {Wickham, Hadley},
 	year         = 2019,
-	month        = {5},
+	month        = 5,
 	booktitle    = {Advanced {R}},
 	publisher    = {Chapman and Hall/CRC},
 	doi          = {10.1201/9781351201315},
@@ -217,11 +219,22 @@
 	title        = {The Development and Rationale of Cross-blended Hypsometric Tints},
 	author       = {Patterson, Tom and Jenny, Bernhard},
 	year         = 2011,
-	month        = {6},
+	month        = 6,
 	journal      = {Cartographic Perspectives},
 	number       = 69,
-	pages        = {31-46},
+	pages        = {31--46},
 	doi          = {10.14714/CP69.20},
 	url          = {https://cartographicperspectives.org/index.php/journal/article/view/cp69-patterson-jenny},
 	abstractnote = {Hypsometric tints have been a favored mapping technique for over 150 years.By the mid-twentieth century, hypsometric tints based on the work of JohnBartholomew, Jr., Eduard Imhof, and Karl Peucker became the de facto standardfor physical reference maps at small scales. More recently, the role and design ofhypsometric tints have come under scrutiny. One reason for this is the concern thatpeople misread elevation colors as climate or vegetation information. Cross-blendedhypsometric tints, introduced in 2009, are a partial solution to this problem. Theyuse variable lowland colors customized to match the differing natural environmentsof world regions, which merge into one another. In the short time since theirintroduction, cross-blended hypsometric tints have proved to be a popular choiceamong professional mapmakers. Most maps made with cross-blended hypsometrictints also contain shaded relief (terrain represented with modulated light andshadows).}
+}
+@article{Leonardi2023,
+	title        = {{tidysdm}: leveraging the flexibility of {tidymodels} for Species Distribution Modelling in {R}},
+	author       = {Michela Leonardi and Margherita Colucci and Andrea Manica},
+	year         = 2023,
+	journal      = {bioRxiv},
+	publisher    = {Cold Spring Harbor Laboratory},
+	doi          = {10.1101/2023.07.24.550358},
+	url          = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358},
+	elocation-id = {2023.07.24.550358},
+	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
