--- a/vignettes/articles/faqs.Rmd
+++ b/vignettes/articles/faqs.Rmd
@@ -22,6 +22,9 @@ and the potential solutions to it (mostly related with the use of **terra** and
 **ggplot2** at this stage). You can ask for help or search previous questions in
 the following links.
 
+You can also ask in [Stack Overflow](https://stackoverflow.com/) using the tag
+[`tidyterra`](https://stackoverflow.com/questions/tagged/tidyterra).
+
 ```{r issues, echo=FALSE, results='asis'}
 link <- unlist(packageDescription("tidyterra")["BugReports"])
 cat("\n- Issues: ", link)
