--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,8 @@ results](https://badges.cranchecks.info/worst/tidyterra.svg)](https://cran.r-pro
 [![Project Status: Active -- The project has reached a stable, usable state and
 is being actively
 developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![Stack Exchange questions](https://img.shields.io/stackexchange/stackoverflow/t/tidyterra?logo=stackoverflow&label=stackoverflow%20q%26a)](https://stackoverflow.com/questions/tagged/tidyterra)
+[![Stack Exchange
+questions](https://img.shields.io/stackexchange/stackoverflow/t/tidyterra?logo=stackoverflow&label=stackoverflow%20q%26a)](https://stackoverflow.com/questions/tagged/tidyterra)
 
 <!-- badges: end -->
 
@@ -83,7 +84,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method                            | SpatVector                                    | SpatRaster                                                                                     |
-|--------------------|--------------------|----------------------------------------|
+|--------------------|--------------------|---------------------------------------|
 | `tibble::as_tibble()`                       | ✔️                                            | ✔️                                                                                             |
 | `dplyr::select()`                           | ✔️                                            | ✔️ Select layers                                                                               |
 | `dplyr::mutate()`                           | ✔️                                            | ✔️ Create /modify layers                                                                       |
@@ -297,9 +298,12 @@ You can also ask in [Stack Overflow](https://stackoverflow.com/) using the tag
 
 ## Citation
 
-```{r echo=FALSE, results='asis'}
-print(citation("tidyterra"), bibtex = FALSE)
-```
+If you use this software, please cite our article in the [Journal of Open Source
+Software](https://joss.theoj.org/):
+
+> Hernangómez, D., (2023). Using the tidyverse with terra objects: the tidyterra
+> package. *Journal of Open Source Software*, *8*(91), 5751,
+> <https://doi.org/10.21105/joss.05751>.
 
 A BibTeX entry for LaTeX users is
 
