--- a/vignettes/welcome.Rmd
+++ b/vignettes/welcome.Rmd
@@ -94,17 +94,10 @@ library(terra)
 f <- system.file("extdata/cyl_temp.tif", package = "tidyterra")
 
 temp <- rast(f)
+#> Error: [rast] filename is empty. Provide a valid filename
 
 temp
-#> class       : SpatRaster 
-#> dimensions  : 87, 118, 3  (nrow, ncol, nlyr)
-#> resolution  : 3881.255, 3881.255  (x, y)
-#> extent      : -612335.4, -154347.3, 4283018, 4620687  (xmin, xmax, ymin, ymax)
-#> coord. ref. : World_Robinson 
-#> source      : cyl_temp.tif 
-#> names       :   tavg_04,   tavg_05,  tavg_06 
-#> min values  :  1.885463,  5.817587, 10.46338 
-#> max values  : 13.283829, 16.740898, 21.11378
+#> Error in eval(expr, envir, enclos): objeto 'temp' no encontrado
 
 mod <- temp %>%
   select(-1) %>%
@@ -112,17 +105,10 @@ mod <- temp %>%
   relocate(newcol, .before = 1) %>%
   replace_na(list(newcol = 3)) %>%
   rename(difference = newcol)
+#> Error in eval(expr, envir, enclos): objeto 'temp' no encontrado
 
 mod
-#> class       : SpatRaster 
-#> dimensions  : 87, 118, 3  (nrow, ncol, nlyr)
-#> resolution  : 3881.255, 3881.255  (x, y)
-#> extent      : -612335.4, -154347.3, 4283018, 4620687  (xmin, xmax, ymin, ymax)
-#> coord. ref. : World_Robinson 
-#> source(s)   : memory
-#> names       : difference,   tavg_05,  tavg_06 
-#> min values  :   2.817647,  5.817587, 10.46338 
-#> max values  :   5.307511, 16.740898, 21.11378
+#> Error in eval(expr, envir, enclos): objeto 'mod' no encontrado
 ```
 
 On the previous example, we had:
@@ -205,12 +191,8 @@ ggplot() +
     palette = "muted",
     na.value = "white"
   )
+#> Error in eval(expr, envir, enclos): objeto 'temp' no encontrado
 ```
-
-<div class="figure">
-<img src="./faceted-1.png" alt="A faceted SpatRaster" width="100%" />
-<p class="caption">A faceted SpatRaster</p>
-</div>
 
 
 ```r
@@ -218,6 +200,7 @@ ggplot() +
 
 f_volcano <- system.file("extdata/volcano2.tif", package = "tidyterra")
 volcano2 <- rast(f_volcano)
+#> Error: [rast] filename is empty. Provide a valid filename
 
 ggplot() +
   geom_spatraster(data = volcano2) +
@@ -225,12 +208,10 @@ ggplot() +
   scale_fill_whitebox_c() +
   coord_sf(expand = FALSE) +
   labs(fill = "elevation")
+#> Error in `geom_spatraster()`:
+#> ! `tidyterra::geom_spatraster()` only works with <SpatRaster> objects, not <matrix/array>. See
+#>   `?terra::vect()`
 ```
-
-<div class="figure">
-<img src="./contourlines-1.png" alt="Contour lines plot for a SpatRaster" width="100%" />
-<p class="caption">Contour lines plot for a SpatRaster</p>
-</div>
 
 
 ```r
@@ -240,12 +221,10 @@ ggplot() +
   geom_spatraster_contour_filled(data = volcano2) +
   scale_fill_whitebox_d(palette = "atlas") +
   labs(fill = "elevation")
+#> Error in `geom_spatraster_contour_filled()`:
+#> ! `tidyterra::geom_spatraster_contour_filled()` only works with <SpatRaster> objects, not <matrix/array>.
+#>   See `?terra::vect()`
 ```
-
-<div class="figure">
-<img src="./contourfilled-1.png" alt="Contour filled plot for a SpatRaster" width="100%" />
-<p class="caption">Contour filled plot for a SpatRaster</p>
-</div>
 
 With {tidyterra} you can also plot RGB SpatRasters to add imagery to your plots:
 
@@ -255,35 +234,27 @@ With {tidyterra} you can also plot RGB SpatRasters to add imagery to your plots:
 
 f_v <- system.file("extdata/cyl.gpkg", package = "tidyterra")
 v <- vect(f_v)
+#> Error: [vect] file does not exist:
 
 # Read a tile
 f_rgb <- system.file("extdata/cyl_tile.tif", package = "tidyterra")
 
 r_rgb <- rast(f_rgb)
+#> Error: [rast] filename is empty. Provide a valid filename
 
 rgb_plot <- ggplot(v) +
   geom_spatraster_rgb(data = r_rgb) +
   geom_spatvector(fill = NA, size = 1)
+#> Error in eval(expr, envir, enclos): objeto 'v' no encontrado
 
 rgb_plot
-```
-
-<div class="figure">
-<img src="./rgb-1.png" alt="Plotting a RGB SpatRaster" width="100%" />
-<p class="caption">Plotting a RGB SpatRaster</p>
-</div>
-
-```r
+#> Error in eval(expr, envir, enclos): objeto 'rgb_plot' no encontrado
 # Change CRS automatically
 
 rgb_plot +
   coord_sf(crs = 3857)
+#> Error in eval(expr, envir, enclos): objeto 'rgb_plot' no encontrado
 ```
-
-<div class="figure">
-<img src="./rgb-2.png" alt="Changing CRS of the RGB plot" width="100%" />
-<p class="caption">Changing CRS of the RGB plot</p>
-</div>
 
 {tidyterra} provides selected scales that are suitable for creating hypsometric
 and bathymetric maps:
@@ -291,17 +262,10 @@ and bathymetric maps:
 
 ```r
 asia <- rast(system.file("extdata/asia.tif", package = "tidyterra"))
+#> Error: [rast] filename is empty. Provide a valid filename
 
 asia
-#> class       : SpatRaster 
-#> dimensions  : 232, 432, 1  (nrow, ncol, nlyr)
-#> resolution  : 22550.66, 22512.94  (x, y)
-#> extent      : 7619120, 17361007, -1304745, 3918256  (xmin, xmax, ymin, ymax)
-#> coord. ref. : WGS 84 / Pseudo-Mercator (EPSG:3857) 
-#> source      : asia.tif 
-#> name        : file44bc291153f2 
-#> min value   :        -10071.50 
-#> max value   :          6064.73
+#> Error in eval(expr, envir, enclos): objeto 'asia' no encontrado
 
 ggplot() +
   geom_spatraster(data = asia) +
@@ -321,12 +285,8 @@ ggplot() +
   ) +
   theme_minimal() +
   theme(legend.position = "bottom")
+#> Error in eval(expr, envir, enclos): objeto 'asia' no encontrado
 ```
-
-<div class="figure">
-<img src="./hypso-1.png" alt="Hypsometric tints" width="100%" />
-<p class="caption">Hypsometric tints</p>
-</div>
 
 ### SpatVectors
 
