--- a/vignettes/paper.bib
+++ b/vignettes/paper.bib
@@ -16,12 +16,15 @@
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
 	shorttitle   = {Spatial {Statistics} for {Data} {Science}},
 	author       = {Moraga, Paula},
-	year         = 2023,
-	publisher    = {Chapman \& Hall/CRC},
+	year         = 2024,
+	publisher    = {CRC Press},
+	address      = {Boca Raton, FL},
+	series       = {Chapman \& {Hall}/{CRC} data science series},
+	isbn         = {9781032633510},
 	url          = {https://www.paulamoraga.com/book-spatial/},
 	urldate      = {2023-07-17},
-	note         = {Online available, publication pending},
-	abstract     = {A book for Spatial Statistics for Data Science with R.},
+	edition      = {First edition},
+	keywords     = {Spatial analysis (Statistics), R (Computer program language)},
 	language     = {en}
 }
 @manual{R-biomod2,
