Add new reference

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -188,3 +188,14 @@
 	date         = {2023-10-19},
 	langid       = {en}
 }
+@misc{popovic_population_2023,
+	title        = {How to map population Change with {GHSL} Data in {R}},
+	author       = {Popovic, Milos},
+	year         = 2023,
+	month        = nov,
+	journal      = {{Milos Popovic}},
+	url          = {https://milospopovic.net/map-population-change-in-r/},
+	urldate      = {2023-11-25},
+	abstract     = {In this tutorial, I will show you how to use R and some awesome packages to download, load, crop, and calculate population difference from the Global Human Settlement Layer (GHSL) data, and how to visualize the results using ggplot2 and tidyterra.},
+	language     = {en-us}
+}
