--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,71 +1,3 @@
-@misc{schramm2022plotting,
-	title        = {{@mpschramm}: Plotting drought conditions},
-	author       = {Schramm, Michael},
-	year         = 2022,
-	url          = {https://michaelpaulschramm.com/posts/2022-07-22-drought/}
-}
-@misc{becker_spatial_2023,
-	title        = {Spatial Data in the {mlr3} Ecosystem},
-	author       = {Becker, Marc},
-	year         = 2023,
-	month        = feb,
-	journal      = {{mlr3}: Machine Learning in {R}},
-	url          = {https://mlr-org.com/gallery/technical/2023-02-27-land-cover-classification/index.html},
-	urldate      = {2023-07-17},
-	abstract     = {Run a land cover classification of the city of Leipzig.},
-	language     = {en}
-}
-@misc{massicotte_how_2022,
-	title        = {How to read {AMSR2} sea ice data with {terra}},
-	author       = {Massicotte, Philippe},
-	year         = 2022,
-	month        = aug,
-	url          = {https://www.pmassicotte.com/posts/2022-08-11-how-to-read-amsr2-seaice-data/},
-	urldate      = {2023-07-17},
-	language     = {en},
-	journak      = {{Philippe Massicotte}}
-}
-@misc{molitor_introducing_2022,
-	title        = {Introducing tidal flat habitat},
-	author       = {Molitor, Cullen},
-	year         = 2022,
-	month        = sep,
-	journal      = {{Ocean Health Index}},
-	url          = {https://oceanhealthindex.org/news/tidal_flats/},
-	urldate      = {2023-07-17}
-}
-@misc{roye_hillshade_2022,
-	title        = {Hillshade effects},
-	author       = {Royé, Dominic},
-	year         = 2022,
-	month        = jul,
-	journal      = {{Dr. Dominic Royé}},
-	url          = {https://dominicroye.github.io/en/2022/hillshade-effects/},
-	urldate      = {2023-07-17},
-	abstract     = {It is very common to see relief maps with shadow effects, also known as 'hillshade', which generates visual depth. How can we create these effects in R and how to include them in ggplot2?},
-	language     = {en-us}
-}
-@misc{hernangomez_introducing_2022,
-	title        = {Introducing {tidyterra}},
-	author       = {Hernangómez, Diego},
-	year         = 2022,
-	month        = may,
-	journal      = {{One world: Projects, maps and coding}},
-	url          = {https://dieghernan.github.io/202205_tidyterra/},
-	urldate      = {2023-07-17},
-	abstract     = {Easily work and ggplot SpatRasters - tidyterra provides tidyverse methods for terra objects and geom functions for plotting with ggplot2....},
-	language     = {en-US}
-}
-@misc{semba_getting_2023,
-	title        = {Getting {GEBCO} Bathymetry Data and glean the power of {terra} and {tidyterra} packages for raster and vector objects},
-	author       = {Semba, Masumbuko},
-	year         = 2023,
-	month        = mar,
-	journal      = {{ng'ara}},
-	url          = {https://lugoga.github.io/semba-quarto/posts/gebco/},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
 @article{bahlburg2023,
 	title        = {An intercomparison of models predicting growth of {Antarctic} krill ({Euphausia superba}): The importance of recognizing model specificity},
 	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
@@ -80,6 +12,65 @@
 	url          = {https://doi.org/10.1371/journal.pone.0286036},
 	abstract     = {Antarctic krill (Euphausia superba) is a key species of the Southern Ocean, impacted by climate change and human exploitation. Understanding how these changes affect the distribution and abundance of krill is crucial for generating projections of change for Southern Ocean ecosystems. Krill growth is an important indicator of habitat suitability and a series of models have been developed and used to examine krill growth potential at different spatial and temporal scales. The available models have been developed using a range of empirical and mechanistic approaches, providing alternative perspectives and comparative analyses of the key processes influencing krill growth. Here we undertake an intercomparison of a suite of the available models to understand their sensitivities to major driving variables. This illustrates that the results are strongly determined by the model structure and technical characteristics, and the data on which they were developed and validated. Our results emphasize the importance of assessing the constraints and requirements of individual krill growth models to ensure their appropriate application. The study also demonstrates the value of the development of alternative modelling approaches to identify key processes affecting the dynamics of krill. Of critical importance for modelling the growth of krill is appropriately assessing and accounting for differences in estimates of food availability resulting from alternative methods of observation. We suggest that an intercomparison approach is particularly valuable in the development and application of models for the assessment of krill growth potential at circumpolar scales and for future projections. As another result of the intercomparison, the implementations of the models used in this study are now publicly available for future use and analyses.}
 }
+@misc{becker_spatial_2023,
+	title        = {Spatial Data in the {mlr3} Ecosystem},
+	author       = {Becker, Marc},
+	year         = 2023,
+	month        = feb,
+	journal      = {{mlr3}: Machine Learning in {R}},
+	url          = {https://mlr-org.com/gallery/technical/2023-02-27-land-cover-classification/index.html},
+	urldate      = {2023-07-17},
+	abstract     = {Run a land cover classification of the city of Leipzig.},
+	language     = {en}
+}
+@phdthesis{chavez_sonoran_2023,
+	title        = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}: {Charting} the {Path} {Toward} {Conservation}.},
+	shorttitle   = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}},
+	author       = {Chavez, Maria},
+	year         = 2023,
+	doi          = {10.34885/E2HA-QE07},
+	url          = {https://kew.iro.bl.uk/concern/thesis_or_dissertations/6410eec9-e28d-4ad9-8bda-1c8ea613ab6d},
+	urldate      = {2023-11-28},
+	language     = {en},
+	school       = {Queen Mary, University of London},
+	keywords     = {FOS: Biological sciences}
+}
+@book{desaix_2023,
+	title        = {Migratory Networks in {R}},
+	author       = {DeSaix, Matt},
+	year         = 2023,
+	month        = aug,
+	publisher    = {Online},
+	url          = {https://mgdesaix.github.io/connectivity-book/},
+	urldate      = {2023-09-01},
+	language     = {en}
+}
+@article{gibson_targeted_2023,
+	title        = {Targeted sampling of {Toxolasma} parvum ({Lilliput}) in southwestern {Ontario}, 2022},
+	author       = {Gibson, Mandy P.},
+	year         = 2023,
+	publisher    = {Ontario and Prairie Region},
+	address      = {Burlington, ON},
+	series       = {Canadian data report of fisheries and aquatic sciences,},
+	number       = 1369,
+	isbn         = 9780660477961,
+	note         = {OCLC: 1405850670},
+	abstract     = {"Toxolasma parvum (Lilliput) is currently listed as Endangered under the federal Species at Risk Act (SARA). At the time of its previous assessment by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), only 39 live collections of T. parvum had ever been found in Canada. We hypothesized that the low detection of T. parvum may be the result of a failure to target preferred habitat types of this species in Canada. In 2022, Fisheries and Oceans Canada (DFO) initiated a sampling program to target Lilliput preferred habitats by sampling 28 sites in the Lake St. Clair watershed, 5 sites in the Lake Erie watershed, and 2 sites in the Lake Ontario watershed"--Abstract.},
+	language     = {eng},
+	collaborator = {{Canada.}},
+	keywords     = {Toxolasma parvum Sampling Ontario}
+}
+@misc{hernangomez_introducing_2022,
+	title        = {Introducing {tidyterra}},
+	author       = {Hernangómez, Diego},
+	year         = 2022,
+	month        = may,
+	journal      = {{One world: Projects, maps and coding}},
+	url          = {https://dieghernan.github.io/202205_tidyterra/},
+	urldate      = {2023-07-17},
+	abstract     = {Easily work and ggplot SpatRasters - tidyterra provides tidyverse methods for terra objects and geom functions for plotting with ggplot2....},
+	language     = {en-US}
+}
 @book{hufkens_handful_2023,
 	title        = {A {Handful} of {Pixels}},
 	author       = {Hufkens, Koen},
@@ -90,47 +81,12 @@
 	urldate      = {2023-07-17},
 	language     = {en}
 }
-@book{moraga2023,
-	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
-	shorttitle   = {Spatial {Statistics} for {Data} {Science}},
-	author       = {Moraga, Paula},
-	year         = 2024,
-	publisher    = {CRC Press},
-	address      = {Boca Raton, FL},
-	series       = {Chapman \& {Hall}/{CRC} data science series},
-	isbn         = {9781032633510},
-	url          = {https://www.paulamoraga.com/book-spatial/},
-	urldate      = {2023-07-17},
-	edition      = {First edition},
-	keywords     = {Spatial analysis (Statistics), R (Computer program language)},
-	language     = {en}
-}
 @misc{isken2023,
 	title        = {Hello World Maps in {R} Using Both Raster and Vector Data},
 	author       = {Mark Isken},
+	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html},
 	date         = {2023-04-03},
-	langid       = {en},
-	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html}
-}
-@misc{semba_compute_2023,
-	title        = {Compute Normalized Difference Vegetation Index in {R}},
-	author       = {Semba, Masumbuko},
-	year         = 2023,
-	month        = apr,
-	journal      = {{ng'ara}},
-	url          = {https://lugoga.github.io/semba-quarto/posts/ndvi/},
-	urldate      = {2023-07-17},
-	language     = {en}
-}
-@misc{popovich_animated_2023,
-	title        = {Animated raster maps with {ggplot2} and {gifski} in {R}},
-	author       = {Popovic, Milos},
-	year         = 2023,
-	month        = jul,
-	journal      = {{Youtube}},
-	url          = {https://youtube.com/watch?v=GMnuNjnXnS8},
-	urldate      = {2023-07-17},
-	language     = {en}
+	langid       = {en}
 }
 @article{Lacko2023,
 	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
@@ -144,16 +100,6 @@
 	doi          = {10.21105/joss.05082},
 	url          = {https://doi.org/10.21105/joss.05082}
 }
-@misc{sepulveda_2023,
-	title        = {Exploring {Santiago}
-	de {Chile}: Hillshade and Hypsometric Map with TidyTerra and Ragg},
-	author       = {Ignacio Sepulveda},
-	year         = 2023,
-	month        = aug,
-	journal      = {medium.com},
-	url          = {https://medium.com/@ignaciodsg/exploring-santiago-de-chile-hillshade-and-hypsometric-map-with-tidyterra-and-ragg-6929a6c7143},
-	urldate      = {2023-08-03}
-}
 @article{Leonardi2023.07.24.550358,
 	title        = {{tidysdm}: leveraging the flexibility of {tidymodels} for Species Distribution Modelling in {R}},
 	author       = {Michela Leonardi and Margherita Colucci and Andrea Manica},
@@ -165,15 +111,15 @@
 	elocation-id = {2023.07.24.550358},
 	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
-@book{desaix_2023,
-	title        = {Migratory Networks in {R}},
-	author       = {DeSaix, Matt},
-	year         = 2023,
+@misc{massicotte_how_2022,
+	title        = {How to read {AMSR2} sea ice data with {terra}},
+	author       = {Massicotte, Philippe},
+	year         = 2022,
 	month        = aug,
-	publisher    = {Online},
-	url          = {https://mgdesaix.github.io/connectivity-book/},
-	urldate      = {2023-09-01},
-	language     = {en}
+	url          = {https://www.pmassicotte.com/posts/2022-08-11-how-to-read-amsr2-seaice-data/},
+	urldate      = {2023-07-17},
+	language     = {en},
+	journak      = {{Philippe Massicotte}}
 }
 @article{meister2023,
 	title        = {Blue mussels in western Norway have vanished where in reach of crawling predators},
@@ -188,6 +134,30 @@
 	date         = {2023-10-19},
 	langid       = {en}
 }
+@misc{molitor_introducing_2022,
+	title        = {Introducing tidal flat habitat},
+	author       = {Molitor, Cullen},
+	year         = 2022,
+	month        = sep,
+	journal      = {{Ocean Health Index}},
+	url          = {https://oceanhealthindex.org/news/tidal_flats/},
+	urldate      = {2023-07-17}
+}
+@book{moraga_spatial_2023,
+	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
+	shorttitle   = {Spatial {Statistics} for {Data} {Science}},
+	author       = {Moraga, Paula},
+	year         = 2023,
+	month        = nov,
+	publisher    = {{Chapman and Hall/CRC}},
+	address      = {Boca Raton},
+	doi          = {10.1201/9781032641522},
+	isbn         = 9781032641522,
+	url          = {https://www.taylorfrancis.com/books/9781032641522},
+	urldate      = {2023-11-28},
+	edition      = 1,
+	language     = {en}
+}
 @misc{popovic_population_2023,
 	title        = {How to map population Change with {GHSL} Data in {R}},
 	author       = {Popovic, Milos},
@@ -198,4 +168,60 @@
 	urldate      = {2023-11-25},
 	abstract     = {In this tutorial, I will show you how to use R and some awesome packages to download, load, crop, and calculate population difference from the Global Human Settlement Layer (GHSL) data, and how to visualize the results using ggplot2 and tidyterra.},
 	language     = {en-us}
+}
+@misc{popovich_animated_2023,
+	title        = {Animated raster maps with {ggplot2} and {gifski} in {R}},
+	author       = {Popovic, Milos},
+	year         = 2023,
+	month        = jul,
+	journal      = {{Youtube}},
+	url          = {https://youtube.com/watch?v=GMnuNjnXnS8},
+	urldate      = {2023-07-17},
+	language     = {en}
+}
+@misc{roye_hillshade_2022,
+	title        = {Hillshade effects},
+	author       = {Royé, Dominic},
+	year         = 2022,
+	month        = jul,
+	journal      = {{Dr. Dominic Royé}},
+	url          = {https://dominicroye.github.io/en/2022/hillshade-effects/},
+	urldate      = {2023-07-17},
+	abstract     = {It is very common to see relief maps with shadow effects, also known as 'hillshade', which generates visual depth. How can we create these effects in R and how to include them in ggplot2?},
+	language     = {en-us}
+}
+@misc{schramm2022plotting,
+	title        = {{@mpschramm}: Plotting drought conditions},
+	author       = {Schramm, Michael},
+	year         = 2022,
+	url          = {https://michaelpaulschramm.com/posts/2022-07-22-drought/}
+}
+@misc{semba_compute_2023,
+	title        = {Compute Normalized Difference Vegetation Index in {R}},
+	author       = {Semba, Masumbuko},
+	year         = 2023,
+	month        = apr,
+	journal      = {{ng'ara}},
+	url          = {https://lugoga.github.io/semba-quarto/posts/ndvi/},
+	urldate      = {2023-07-17},
+	language     = {en}
+}
+@misc{semba_getting_2023,
+	title        = {Getting {GEBCO} Bathymetry Data and glean the power of {terra} and {tidyterra} packages for raster and vector objects},
+	author       = {Semba, Masumbuko},
+	year         = 2023,
+	month        = mar,
+	journal      = {{ng'ara}},
+	url          = {https://lugoga.github.io/semba-quarto/posts/gebco/},
+	urldate      = {2023-07-17},
+	language     = {en}
+}
+@misc{sepulveda_2023,
+	title        = {Exploring {Santiago} de {Chile}: Hillshade and Hypsometric Map with TidyTerra and Ragg},
+	author       = {Ignacio Sepulveda},
+	year         = 2023,
+	month        = aug,
+	journal      = {medium.com},
+	url          = {https://medium.com/@ignaciodsg/exploring-santiago-de-chile-hillshade-and-hypsometric-map-with-tidyterra-and-ragg-6929a6c7143},
+	urldate      = {2023-08-03}
 }
