Add action for devel `sf` #124

--- a/vignettes/articles/faqs.Rmd
+++ b/vignettes/articles/faqs.Rmd
@@ -485,3 +485,16 @@ autoplot(r) +
     text_cex = .8
   )
 ```
+
+
+## Session info
+
+<details>
+  <summary>Details</summary>
+```{r session, echo=FALSE}
+if (!require("sessioninfo")) {
+  install.packages("sessioninfo")
+}
+sessioninfo::session_info()
+```
+</details>
