--- a/vignettes/articles/palettes.Rmd
+++ b/vignettes/articles/palettes.Rmd
@@ -124,3 +124,16 @@ for (i in allpals) {
   print(ss)
 }
 ```
+
+
+## Session info
+
+<details>
+  <summary>Details</summary>
+```{r session, echo=FALSE}
+if (!require("sessioninfo")) {
+  install.packages("sessioninfo")
+}
+sessioninfo::session_info()
+```
+</details>
