--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -225,3 +225,12 @@
 	url          = {https://medium.com/@ignaciodsg/exploring-santiago-de-chile-hillshade-and-hypsometric-map-with-tidyterra-and-ragg-6929a6c7143},
 	urldate      = {2023-08-03}
 }
+@misc{mahoney_cloud_2023,
+	title        = {Cloud-Native Geospatial If You Don't Speak Snake},
+	author       = {Mike Mahoney},
+	year         = 2023,
+	month        = sep,
+	journal      = {{Cloud-Native Geospatial Foundation}},
+	url          = {https://cloudnativegeo.org/blog/2023/09/cloud-native-geospatial-if-you-dont-speak-snake/},
+	urldate      = {2024-01-22}
+}
