--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -234,3 +234,12 @@
 	url          = {https://cloudnativegeo.org/blog/2023/09/cloud-native-geospatial-if-you-dont-speak-snake/},
 	urldate      = {2024-01-22}
 }
+@manual{R-nasaacces,
+	title        = {{NASAaccess}: Downloading and Reformatting Tool for {NASA} Earth Observation Data Products},
+	author       = {Ibrahim Mohammed},
+	year         = 2024,
+	address      = {Greenbelt, Maryland},
+	url          = {https://github.com/nasa/NASAaccess},
+	note         = {R package version 4.0.0},
+	institution  = {National Aeronautics and Space Administration, Goddard Space Flight Center}
+}
