Add Nature article

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -243,3 +243,19 @@
 	note         = {R package version 4.0.0},
 	institution  = {National Aeronautics and Space Administration, Goddard Space Flight Center}
 }
+@article{turner2024,
+	title        = {Targeting ocean conservation outcomes through threat reduction},
+	author       = {Turner, Joseph A. and Starkey, Malcolm and Dulvy, Nicholas K. and Hawkins, Frank and Mair, Louise and Serckx, Adeline and Brooks, Thomas and Polidoro, Beth and Butchart, Stuart H. M. and Carpenter, Kent and Epps, Minna and Jabado, Rima W. and Macfarlane, Nicholas B. W. and Bennun, Leon},
+	year         = 2024,
+	month        = {jan},
+	day          = 23,
+	journal      = {npj Ocean Sustainability},
+	volume       = 3,
+	number       = 1,
+	pages        = 4,
+	doi          = {10.1038/s44183-023-00040-8},
+	issn         = {2731-426X},
+	url          = {https://doi.org/10.1038/s44183-023-00040-8},
+	abstract     = {Nations have committed to reductions in the global rate of species extinctions through the Sustainable Development Goals 14 and 15, for ocean and terrestrial species, respectively. Biodiversity loss is worsening despite rapid growth in the number and extent of protected areas, both at sea and on land. Resolving this requires targeting the locations and actions that will deliver positive conservation outcomes for biodiversity. The Species Threat Abatement and Restoration (STAR) metric, developed by a consortium of experts, quantifies the contributions that abating threats and restoring habitats in specific places offer towards reducing extinction risk based on the IUCN Red List of Threatened SpeciesTM. STAR is now recommended as an appropriate metric by recent disclosure frameworks for companies to report their impacts on nature and STAR has seen widespread uptake within the private sector. However, it is currently only available for the terrestrial realm. We extend the coverage of the threat abatement component of the STAR metric (START), used to identify locations where positive interventions could make a large contribution to reducing global species extinction risk and where developments that increase threats to species should be mitigated, to the marine realm for 1646 marine species. Reducing unsustainable fishing provides the greatest opportunity to lower species extinction risk, comprising 43{\%} of the marine START score. Three-quarters (75{\%}) of the global marine START score falls entirely outside the boundaries of protected areas and only 2.7{\%} falls within no-take protected areas. The STAR metric can be used both to guide protected area expansion and to target other actions, such as establishment and enforcement of fishing limits, to recover biodiversity.}
+}
+
