--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -32,7 +32,7 @@
 	url          = {https://kew.iro.bl.uk/concern/thesis_or_dissertations/6410eec9-e28d-4ad9-8bda-1c8ea613ab6d},
 	urldate      = {2023-11-28},
 	language     = {en},
-	school       = {Queen Mary, University of London},
+	school       = {{Queen Mary, University of London}},
 	keywords     = {FOS: Biological sciences}
 }
 @book{desaix_2023,
@@ -82,7 +82,7 @@
 	language     = {en}
 }
 @misc{isken2023,
-	title        = {Hello World Maps in {R} Using Both Raster and Vector Data},
+	title        = {{Hello world maps in R using both raster and vector data}},
 	author       = {Mark Isken},
 	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html},
 	date         = {2023-04-03},
@@ -217,7 +217,7 @@
 	language     = {en}
 }
 @misc{sepulveda_2023,
-	title        = {Exploring {Santiago} de {Chile}: Hillshade and Hypsometric Map with TidyTerra and Ragg},
+	title        = {Exploring {Santiago} de {Chile}: Hillshade and hypsometric map with {tidyterra} and {ragg}},
 	author       = {Ignacio Sepulveda},
 	year         = 2023,
 	month        = aug,
@@ -249,7 +249,7 @@
 	year         = 2024,
 	month        = {jan},
 	day          = 23,
-	journal      = {npj Ocean Sustainability},
+	journal      = {{npj Ocean Sustainability}},
 	volume       = 3,
 	number       = 1,
 	pages        = 4,
